# homework_7

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app_edu/: apps.py  models.py  pagination.py  serializers.py  tasks.py  urls.py  validators.py
app_edu/migrations/: 0002_course_owner_lesson_owner.py  0003_alter_lesson_courses.py  0004_alter_lesson_courses.py  0005_subscription.py  0006_alter_subscription_unique_together.py  0007_course_price.py
app_edu/models/: __init__.py  course_model.py  lesson_model.py  subscription_model.py
app_edu/serializers/: __init__.py  course_serializer.py  lesson_serializer.py  subscription_serializer.py
app_edu/signals/: __init__.py  edu_signals.py  handlers.py
app_edu/tests/: test_course.py  test_lesson.py  test_subscribe.py
app_edu/views/: __init__.py  course_view.py  lesson_view.py  subscribtion_view.py
app_payments/: apps.py  models.py  pagination.py  serializers.py  tasks.py  urls.py  views.py
app_payments/migrations/: 0001_initial.py  0002_payment_payment_link_payment_payment_link_expires_at_and_more.py
app_payments/models/: __init__.py  payment_model.py  stripe_product_model.py  stripe_session_model.py
app_payments/services/: stripe.py
app_payments/signals/: handlers.py
app_users/: admin.py  apps.py  models.py  pagination.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
app_users/migrations/: 0003_purchasedproduct_payment.py  (+3 more)
config/: settings.py  urls.py
db_fixtures/: app_edu.json  app_users_payments.json
utils/: hash_storage.py  serializers.py
(+6 files in other folders)
